# bazel_example_project

./: .bazelignore  .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  platform_binary.bzl
dll/: BUILD  dll.cpp  dll.def  dll.h  dll.lds  dll.rc
dll/test/: test_foo.cpp
exe/: BUILD  exe.cpp
lib/: BUILD  lib.cpp  lib.h
sys/: BUILD  foo_a64.asm  foo_x64.asm  foo_x86.asm  resources.h  sys.cpp  sys.rc
trace/: BUILD  WppTrace.h
